# naga_test

./: Cargo.toml
shaders/: mesh.wgsl  simple.wgsl
shaders/composed_mesh/: mesh_bindings.wgsl
shaders/composed_simple/: import_f.wgsl  simple.wgsl
shaders/other/: pbr.wgsl
spv/: light.spv  mesh.spv  simple.spv
src/: main.rs
