[package]
name = "naga_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
naga = {version="0.14.2", features =["wgsl-in","spv-out"]}
naga_oil = {version="0.11.0", features=["prune"]}

